fix both sldiers so they are in alignment

--- a/packages/frontend/app/components/Trade/OrderInput/LeverageSlider/LeverageSlider.module.css
+++ b/packages/frontend/app/components/Trade/OrderInput/LeverageSlider/LeverageSlider.module.css
@@ -1,12 +1,10 @@
-:root {
-    --slider-track-margin: 20px 0 30px 0;
-}
 .leverageSliderContainer {
     width: 100%;
     padding: 0;
     margin: 0;
     gap: var(--gap-s);
 }
+
 .containerTitle {
     color: var(--text2, #bcbcc4);
     font-size: var(--font-size-s, 12px);
@@ -18,21 +16,24 @@
     justify-content: space-between;
     width: 100%;
     gap: var(--gap-m);
-    padding-left: var(--padding-xs);
+    /* padding-left: var(--padding-xs); */
 }
 
 .sliderContainer {
     flex: 1;
     position: relative;
+    padding-right: 7px;
+    padding-left: 10px;
 }
 
 .sliderTrack {
     position: relative;
     width: 100%;
-    height: 2px;
+    height: 4px;
     cursor: pointer;
-    margin: var(--slider-track-margin);
+    margin: 20px 0 30px 0;
 }
+
 .sliderTrack::before {
     content: '';
     position: absolute;
@@ -74,13 +75,13 @@
 .sliderMarkerCurrent {
     display: none;
 }
+
 .sliderKnob {
     position: absolute;
     width: 14px;
     height: 14px;
     border-radius: 50%;
     top: 50%;
-
     transform: translate(-50%, -50%);
     border: 2px solid;
     background-color: var(--bg-dark2) !important;
@@ -113,12 +114,15 @@
     padding: 5px;
 }
 
+.valueLabel:first-child {
+    margin-left: 4px;
+}
+
 .valueLabel:hover {
     color: var(--text1) !important;
 }
 
 .valueDisplay {
-    position: relative;
     width: 50px;
     display: flex;
     align-items: center;
@@ -150,7 +154,6 @@
     width: 100%;
     justify-content: space-between;
     align-items: center;
-
     font-size: var(--font-size-s);
 }
 
